RESOLVED FIXED287414
REGRESSION(290132@main): [iOS] TestWebKitAPI.iOSStylusSupport.StylusLaterDisconnected (api-tests) are crashing
https://bugs.webkit.org/show_bug.cgi?id=287414
Summary REGRESSION(290132@main): [iOS] TestWebKitAPI.iOSStylusSupport.StylusLaterDisc...
Dawn Morningstar
Reported 2025-02-10 09:25:14 PST
1000+ api tests are now crashing after 290132@main https://commits.webkit.org/290132@main History: https://results.webkit.org/suites Test-run: https://build.webkit.org/#/builders/1391/builds/335 Stdio: https://build.webkit.org/#/builders/1391/builds/335/steps/18/logs/stdio Crash: ASSERTION FAILED: internals().lastVisibleContentRectUpdate /Volumes/Data/worker/Apple-iOS-18-Simulator-Debug-Build/build/Source/WebKit/UIProcess/ios/WebPageProxyIOS.mm(1745) : FloatRect WebKit::WebPageProxy::layoutViewportRect() const 1 0x14f5e5dd8 WebKit::WebPageProxy::layoutViewportRect() const 2 0x150ed3fd4 -[WKContentView didUpdateVisibleRect:unobscuredRect:contentInsets:unobscuredRectInScrollViewCoordinates:obscuredInsets:unobscuredSafeAreaInsets:inputViewBounds:scale:minimumScale:viewStability:enclosedInScrollableAncestorView:sendEvenIfUnchanged:] 3 0x14ed2d9c0 -[WKWebView(WKViewInternalIOS) _updateVisibleContentRects] 4 0x14ed2bba8 -[WKWebView(WKViewInternalIOS) _addUpdateVisibleContentRectPreCommitHandler]::$_11::operator()() const 5 0x14ed2bac4 __76-[WKWebView(WKViewInternalIOS) _addUpdateVisibleContentRectPreCommitHandler]_block_invoke 6 0x10e6d9430 CA::Transaction::run_commit_handlers(CATransactionPhase) 7 0x10e6ac4d0 CA::Context::commit_transaction(CA::Transaction*, double, double*) 8 0x10e6d8c70 CA::Transaction::commit() 9 0x10e6da1c4 CA::Transaction::flush_as_runloop_observer(bool) 10 0x10b50321c __CFRUNLOOP_IS_CALLING_OUT_TO_AN_OBSERVER_CALLBACK_FUNCTION__ 11 0x10b4fda80 __CFRunLoopDoObservers 12 0x10b4fd740 CFRunLoopRunSpecific 13 0x115431438 -[NSRunLoop(NSRunLoop) runMode:beforeDate:] 14 0x105794470 TestWebKitAPI::Util::run(bool*) 15 0x10577683c -[TestNavigationDelegate waitForDidFinishNavigation] 16 0x105778760 -[WKWebView(TestWebKitAPIExtras) _test_waitForDidFinishNavigation] 17 0x10577c150 -[WKWebView(TestWebKitAPI) synchronouslyLoadHTMLString:baseURL:] 18 0x10577c1b0 -[WKWebView(TestWebKitAPI) synchronouslyLoadHTMLString:] 19 0x1057684ac createWebView(HasStylusDevice) 20 0x105769140 iOSStylusSupport_StylusLaterDisconnected_Test::TestBody() 21 0x10584dcbc void testing::internal::HandleSehExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) 22 0x10580e3e8 void testing::internal::HandleExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) 23 0x10580e338 testing::Test::Run() 24 0x10580f284 testing::TestInfo::Run() 25 0x105810464 testing::TestSuite::Run() 26 0x10581e110 testing::internal::UnitTestImpl::RunAllTests() 27 0x105852b50 bool testing::internal::HandleSehExceptionsInMethodIfSupported<testing::internal::UnitTestImpl, bool>(testing::internal::UnitTestImpl*, bool (testing::internal::UnitTestImpl::*)(), char const*) 28 0x10581dacc bool testing::internal::HandleExceptionsInMethodIfSupported<testing::internal::UnitTestImpl, bool>(testing::internal::UnitTestImpl*, bool (testing::internal::UnitTestImpl::*)(), char const*) 29 0x10581da28 testing::UnitTest::Run() 30 0x104bf3924 RUN_ALL_TESTS() 31 0x104bf38b8 TestWebKitAPI::TestsController::run(int, char**) Child process terminated with signal 5: Trace/BPT trap
Attachments
Radar WebKit Bug Importer
Comment 1 2025-02-10 09:26:07 PST
Matt Woodrow
Comment 2 2025-02-10 11:40:42 PST
EWS
Comment 3 2025-02-10 11:46:15 PST
Committed 290175@main (e240c702bc2d): <https://commits.webkit.org/290175@main> Reviewed commits have been landed. Closing PR #40366 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.