REGRESSION(290132@main): [iOS] TestWebKitAPI.iOSStylusSupport.StylusLaterDisconnected (api-tests) are crashing. https://bugs.webkit.org/show_bug.cgi?id=287414 <rdar://144538441>

Reviewed by Jonathan Bedard.

These assertions were invalid, so removing them.

The old code didn't have an optional for lastVisibleContentRectUpdate, so just
returned the default initializations of the members if read before we actually
got a rect update.

I added the assertions when moving the struct into an optional, expecting this
not to happen, but it clearly does (without any known broken behaviour).
Removing the assertions to explictly return default values restores the old
behaviour.

* Source/WebKit/UIProcess/ios/WebPageProxyIOS.mm:
(WebKit::WebPageProxy::displayedContentScale const):
(WebKit::WebPageProxy::exposedContentRect const):
(WebKit::WebPageProxy::unobscuredContentRect const):
(WebKit::WebPageProxy::inStableState const):
(WebKit::WebPageProxy::unobscuredContentRectRespectingInputViewBounds const):
(WebKit::WebPageProxy::layoutViewportRect const):

Canonical link: https://commits.webkit.org/290175@main